# mazegen

./: .gitignore  CMakeLists.txt  main.cpp  map_gen_lib.hpp  mazegen.hpp  readme.md
example/: custom_grid.cpp  main.cpp
src/: functions.hpp  mazegen.hpp  types.hpp
